test/org/midica/testfiles/failing/param-n-outside-function-nested.midica
INCLUDE inc/instruments.midica

(
	0  c  /4  l=${x}
)
